obchod - v modalnom okno s detailom fotky  button na rychlu objednavku

--- a/obchod.html
+++ b/obchod.html
@@ -301,6 +301,12 @@
       <a class="obchod-prev">&#10094;</a>
       <a class="obchod-next">&#10095;</a>
       <div id="obchod-caption"></div>
+      <div class="obchod-thumbnail-row" id="obchod-thumbnail-row">
+        <!-- Thumbnails will be injected here by JS -->
+      </div>
+      <button id="obchod-modal-order-btn" class="order-btn">
+        <img src="img/basket.jpg" alt="Objednať" loading="lazy" />
+      </button>
     </div>
     <!-- End Modal -->
 
