--- a/obchod.html
+++ b/obchod.html
@@ -74,16 +74,23 @@
 
   <div class="row">
     <section id="jak-to-funguje" class="obchod-styling">
-     <p> Sem by mohla Peta napisat nieco vseobecne ... 
-      kvalita tusu alebo ze vodu nabera o polnoci pri uplnku zo studanky :) </p>      
+     <p> Kaligrafie tvořím tradiční japonskou technikou, s důrazem na kvalitu materiálu i energie v čase tvorby.
+       Používám kvalitní tuše s vysokou pigmentací a štětce z přírodních vláken, 
+       které mi umožňují zachytit dech okamžiku. Vodu na míchání tuše si beru z pramenů, 
+       ne chemicky upravenou, aby byl každý tah co nejčistší a nejvěrnější. 
+       Nejde mi o dekor, ale o pravdivost znaku — aby nesl sílu významu, ne jen jeho tvar.
+       <br><br>Každá kaligrafie je originál a vzniká v tichu a soustředění. 
+       <br><br>A tak, jak učí mistři v Japonsku — jeden tah, jedna myšlenka. 
+       Jeden znak, jeden vesmír. </p>      
     </section>
     
     <!-- 1. Kaligrafie stojankové -->
      <section id="stojankove" class="obchod-styling">
       <h3>Kaligrafie stojankové</h3>
-      <p> Jednotný rozměr 20×30 cm, dřevěný stojan, černý kaligrafický tuš na bílém plátně nebo zlatý tuš na černém plátně. 
-          Do stojánku se obrazy dejí vyměňovat. Stojany jsou dřevěné, 
-          ručně vyrobené, super kul truhlarem.
+      <p> Jednotný rozměr 20×30 cm, dřevěný stojan, černý kaligrafický tuš na bílém plátně
+         nebo zlatý tuš na černém plátně. Obrazy se dají ve stojánku libovolně vyměňovat — podle nálady, období, energie.
+        <br><br>Stojany jsou dřevěné, ručně vyrobené truhlářem z Moravy. 
+        Každý kus prošel rukama člověka — a je to vidět i cítit.
       </p>
       <p class="price">Jednotna cena za kaligrafie v stojanku: 5000 Kč</p>
       <div class="product">
@@ -197,7 +204,10 @@
 <!-- 2. Modrotisk -->
    <section id="modrotisk" class="obchod-styling">
     <h3>Modrotisk</h3>
-    <p>Originální kousek kaligrafie na tradiční látce, ručně malovaný.</p>
+    <p>Originální kaligrafie na tradiční moravské modrotiskové látce.
+      <br><br>Modrotisk je pro mě rituál: pomalý rytmus, hluboký nádech, štetec namočený v tuši, která se spojí s látkou tak, jak si sama řekne.
+      <br><br>Každá kaligrafie na modrotisku je jediný originál – stejně jako okamžik, ve kterém vznikla.
+    </p>
     <p class="price">Jednotna cena za modrotiskovou kaligrafii: 6000 Kč</p>
     <div class="product">
       <div class="row">
