doplnenie ceny do objednavky

--- a/en/obchod.html
+++ b/en/obchod.html
@@ -286,7 +286,7 @@
           <button
             class="order-btn"
             data-product="Custom Calligraphy"
-            data-vs="900"
+            data-vs="800"
             data-price="0"
           >
             <img src="../img/basket.jpg" alt="Order" loading="lazy" />
@@ -307,7 +307,7 @@
           <button
             class="order-btn"
             data-product="Live Calligraphy for Events"
-            data-vs="901"
+            data-vs="900"
             data-price="0"
           >
             <img src="../img/basket.jpg" alt="Order" loading="lazy" />
@@ -336,7 +336,8 @@
             <br />
             <strong>Or make a bank transfer:</strong><br />
             Account: 5335114002/5500<br />
-            VS: <span id="vs-display"></span>
+            VS: <span id="vs-display"></span><br />
+            Price: <span id="price-display"></span>
           </p>
           <!-- New element for special message -->
           <p
