--- a/obchod.html
+++ b/obchod.html
@@ -241,7 +241,7 @@
     <h3>Kaligrafie na objednavku</h3>
     <p>Originální kousek kaligrafie podle vašich požadavků.</p>
     <p class="price with-button">Cena po dohodě
-      <button class="order-btn" data-product="Kaligrafie na objednavku" data-vs="900" data-price="0">
+      <button class="order-btn" data-product="Kaligrafie na objednavku" data-vs="800" data-price="0">
         <img src="img/basket.jpg" alt="Objednať" loading="lazy" />
       </button>
     </p>
@@ -253,7 +253,7 @@
     <h3>Kaligrafie na firemní akci</h3>
     <p>Nabízím možnost psaní kaligrafie na život přímo na vašich firemních akcích, je možné spojit i se učením základů psaní</p>
     <p class="price with-button">Cena po dohodě
-      <button class="order-btn" data-product="Kaligrafie na živo - firemni akce" data-vs="901" data-price="0">
+      <button class="order-btn" data-product="Kaligrafie na živo - firemni akce" data-vs="900" data-price="0">
         <img src="img/basket.jpg" alt="Objednať" loading="lazy" />
       </button>
     </p>
@@ -281,7 +281,8 @@
             <br>
             <strong>Nebo udelej bankovní převod:</strong><br>
             Účet: 5335114002/5500<br>
-            VS: <span id="vs-display"></span>
+            VS: <span id="vs-display"></span><br>
+            Cena: <span id="price-display"></span>
           </p>
           <!-- Nový element pre špeciálnu správu -->
           <p class="modal-small-text" id="custom-order-message" style="display: none;">
