--- a/en/index.html
+++ b/en/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Japanese calligraphy for sale | zvukstetce.cz</title>
+    <meta name="description" content="Original Japanese calligraphy handwritten not only in Prague. Calligraphy for sale, blueprints, easels, to order, corporate events.">
     <link rel="stylesheet" type="text/css" href="../simple-grid.min.css" />
     <link rel="stylesheet" href="../style.css?v=47" />
     <script type="text/javascript" src="../script.js?v=11"></script>
