--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Japonská kaligrafie na prodej | zvukstetce.cz</title>
+    <meta name="description" content="Originální japonská kaligrafie ručně psaná nejen v Praze . Kaligrafie na prodej, modrotisk, stojánky, na objednávku, firemné akce.">
     <link rel="stylesheet" type="text/css" href="simple-grid.min.css" />
     <link rel="stylesheet" href="style.css?v=47" />
     <script type="text/javascript" src="script.js?v=11"></script>
