--- a/obchod.html
+++ b/obchod.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Japonská kaligrafie na prodej – Praha | zvukstetce.cz</title>
+        <meta name="description" content="Originální japonská kaligrafie ručně psaná nejen v Praze . Kaligrafie na prodej, modrotisk, stojánky, na objednávku, firemné akce.">
         <link rel="stylesheet" type="text/css" href="simple-grid.min.css">
         <link rel="stylesheet" href="style.css?v=47">
         <link rel="stylesheet" href="obchod-lightbox.css" />
@@ -74,11 +76,11 @@
 
   <div class="row">
     <section id="jak-to-funguje" class="obchod-styling">
-     <p> Kaligrafie tvořím tradiční japonskou technikou, s důrazem na kvalitu materiálu i energie v čase tvorby.
-       Používám kvalitní tuše s vysokou pigmentací a štětce z přírodních vláken, 
-       které mi umožňují zachytit dech okamžiku. Vodu na míchání tuše si beru z pramenů, 
-       ne chemicky upravenou, aby byl každý tah co nejčistší a nejvěrnější. 
-       Nejde mi o dekor, ale o pravdivost znaku — aby nesl sílu významu, ne jen jeho tvar.
+     <p> Nabízím originální japonské kaligrafie na prodej.<br>Kaligrafie tvořím tradiční japonskou technikou, s důrazem na kvalitu materiálu i energie v čase tvorby.
+      Používám kvalitní tuše s vysokou pigmentací a štětce z přírodních vláken,
+      které mi umožňují zachytit dech okamžiku. Vodu na míchání tuše si beru z pramenů,
+      ne chemicky upravenou, aby byl každý tah co nejčistší a nejvěrnější.
+      Nejde mi o dekor, ale o pravdivost znaku — aby nesl sílu významu, ne jen jeho tvar.
        <br><br>Každá kaligrafie je originál a vzniká v tichu a soustředění. 
        <br><br>A tak, jak učí mistři v Japonsku — jeden tah, jedna myšlenka. 
        Jeden znak, jeden vesmír. </p>      
