--- a/en/obchod.html
+++ b/en/obchod.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Original Japanese calligraphy handwritten not only in Prague. Calligraphy for sale, blueprints, easels, to order, corporate events.">
     <link rel="stylesheet" type="text/css" href="../simple-grid.min.css" />
     <link rel="stylesheet" href="../style.css?v=47" />
     <link rel="stylesheet" href="../obchod-lightbox.css" />
@@ -66,6 +67,7 @@
       <div class="row">
         <div class="obchod-styling">
          <p>
+          I offer original Japanese calligraphy for sale.<br>
           I create my calligraphy using traditional Japanese technique, with respect for the quality of the materials and the energy of the moment in which the stroke is made.
           I work with high-pigment inks and brushes made from natural fibres, which allow me to capture the breath of the moment. I take water for mixing ink from natural springs — not chemically treated — to keep each stroke as pure and honest as possible.<br><br>
           My aim is not decoration, but truth. The character must carry the power of its meaning — not just the beauty of its shape.
